@@ -1,3 +1,9 @@
+kylin-recorder (1.2.23kord~rc14) v101; urgency=high
+
+  * 修复bug42481：关于中没有软件功能的描述
+
+ -- baijincheng <baijincheng@kylinos.cn>  Tue, 16 Mar 2021 21:54:00 +0800
+
 kylin-recorder (1.2.23kord~rc13) v101; urgency=high
 
   * 修复bug42881：改变系统字号，文件列表时长跟随变化了，但功能菜单下拉列表没有跟随变化
